--- a/index.html
+++ b/index.html
@@ -219,14 +219,14 @@
                 legend: {display:false}, 
                 datalabels: { 
                     // POSICIÓN: 'end' coloca el número al final de la barra
-                    anchor: 'end', 
+                    anchor: 'center', 
                     // ALINEACIÓN: 'right' para barras horizontales, 'top' para verticales
                     align: h ? 'right' : 'top', 
-                    color: '#444', 
+                    color: '#FFFFFF', 
                     // TAMAÑO: Cambia el valor de 'size' para hacer los números más grandes
                     font: {
                         weight: 'black', 
-                        size: 16 // <-- Aumenta este número (ej. 18 o 20)
+                        size: 25 // <-- Aumenta este número (ej. 18 o 20)
                     },
                     // ESPACIADO: Añade un offset para que no pegue a la barra
                     offset: 4 
@@ -247,4 +247,5 @@
     </script>
 </body>
 </html>
+
 
