--- a/index.html
+++ b/index.html
@@ -220,13 +220,14 @@
                 datalabels: { 
                     // POSICIÓN: 'end' coloca el número al final de la barra
                     anchor: 'center', 
-                    // ALINEACIÓN: 'right' para barras horizontales, 'top' para verticales
-                    align: h ? 'right' : 'top', 
-                    color: '#FFFFFF', 
-                    // TAMAÑO: Cambia el valor de 'size' para hacer los números más grandes
-                    font: {
-                        weight: 'black', 
-                        size: 25 // <-- Aumenta este número (ej. 18 o 20)
+    align: 'center', 
+    
+    // Color blanco para contraste
+    color: '#FFFFFF', 
+    
+    font: {
+        weight: 'black',
+        size: 30 // Ajusta este número según qué tan grande lo desees
                     },
                     // ESPACIADO: Añade un offset para que no pegue a la barra
                     offset: 4 
@@ -247,5 +248,6 @@
     </script>
 </body>
 </html>
+
 
 
